--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,18 @@
 <resources>
     <string name="app_name">task-app</string>
+    <string name="action_settings">Settings</string>
+    <string name="SummaryTitle">Summary</string>
+    <string name="TaskToDo">Task To Do</string>
+    <string name="TaskDoing">Task Doing</string>
+    <string name="TaskDone">Task Done</string>
+    <string name="New">New</string>
+    <string name="ShowAll">Show All</string>
+
+    <string name="Cancel">Cancel</string>
+    <string name="Save">Save</string>
+    <string name="Done">Done</string>
+    <string name="LongDescription">Long description</string>
+    <string name="ShortDescription">Short description</string>
+    <string name="Percentage"></string>
+    <string name="intPercentage">0%</string>
 </resources>
